--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ paginate: 5
 navigation:
 - title: Home
   url: /index.html
-- title: Teaching
-  url: /teaching
+- title: Training
+  url: /training
 - title: Publications
   url: /publications
 - title: Talks
