--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -2,6 +2,12 @@
     year: 2017
     locations:
     - 
+        at: "NGS Galaxy workshop, Freiburg, Germany"
+        lectures:
+        -
+            title: "RNA-Seq data analysis with Galaxy"
+            link: "https://galaxyproject.github.io/training-material//RNA-Seq/tutorials/ref_based"
+    - 
         at: "Galaxy Community Conference, Montpellier, France"
         lectures:
         -
